--- a/21880291_Lab02/21880291_11.html
+++ b/21880291_Lab02/21880291_11.html
@@ -85,8 +85,8 @@
     </div>
     
     <br>
-    <input type="checkbox" name="gioitinh" id="" value="nu"> Nu
-    <input type="checkbox" name="gioitinh" id="" value="nam"> Nam <br>
-    <input type="submit" name="tao" value="tao tk">
+    <input type="radio" name="gioitinh" id="" value="nu"> Nu
+    <input type="radio" name="gioitinh" id="" value="nam"> Nam <br>
+    <input type="submit" name="Tao tai khoan" value="tao tk">
 </body>
 </html>
