--- a/21880291_Lab02/21880291_11.html
+++ b/21880291_Lab02/21880291_11.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .question {
+        font-size: 11px;
+        
+    }
+</style>
 <body>
     <h1>Dang ky</h1> 
     <p>Luon mien phi</p>
@@ -81,12 +87,12 @@
                 <option value="2016">2016</option>
             </select>
         </span>
-        <div>Tại sao tôi cần cung cấp ngày sinh của mình?</div>
+        <div class="question">Tại sao tôi cần cung cấp ngày sinh của mình?</div>
     </div>
     
     <br>
     <input type="radio" name="gioitinh" id="" value="nu"> Nu
     <input type="radio" name="gioitinh" id="" value="nam"> Nam <br>
-    <input type="submit" name="Tao tai khoan" value="tao tk">
+    <input type="submit" name="Tao tai khoan " value="tao tk">
 </body>
 </html>
