--- a/21880291_Lab03/21880291_05.html
+++ b/21880291_Lab03/21880291_05.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classt</title>
+    <title>ID</title>
 </head>
 <style type="text/css">
-    .ChuBu {
-        font-size: 36px;
-        color: #903;
+    #idChuBu {
+        font-size: 24px;
+        color: #63c;
     }
 </style>
 <body>
-    <div class="ChuBu">Thẻ DIV có Class ChuBu</div>
-
-    <div>Thẻ div không có định dạng Class</div>
-    <div class="ChuBu">Có class chữ bự</div>
+    <div id="idChuBu">Chữ bự</div>
+    <div>Không có ids</div>
 </body>
 </html>
