--- a/21880291_Lab04/21880291_03.html
+++ b/21880291_Lab04/21880291_03.html
@@ -10,6 +10,6 @@
     <p>JavaScript can change the src (source) attribute of an image.</p>
     <button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
     <img id="myImage" src="pic_bulboff.gif" style="width: 100px;">
-    <button onclick="document.getElementById('myImage').src='pic_bulbon.gif'">Turn on the light</button>
+    <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
 </body>
 </html>
