--- a/21880291_Lab04/21880291_05.html
+++ b/21880291_Lab04/21880291_05.html
@@ -9,6 +9,6 @@
     <h1>What Can JavaScript Do?</h1>
     <p id="demo">JavaScript can change HTML elements</p>
     <p id="demo" style="display: none;">Hello JavaScript</p>
-    <button type="button" onclick="document.getElementById('demo')".style.display='block' '>Click Me!</button>
+    <button type="button" onclick="document.getElementById('demo').style.display='block' ">Click Me!</button>
 </body>
 </html>
