--- a/21880291_Lab02/21880291_11.html
+++ b/21880291_Lab02/21880291_11.html
@@ -16,15 +16,15 @@
     <p>Luon mien phi</p>
     <form action="21880291_01.html" name="frmComboBox" method="get">
         <div>
-            <input type="text" placeholder="Họ" >
-            <input type="text" placeholder="Tên">
+            <input type="text" name="ho" placeholder="Họ" >
+            <input type="text" name="ten" placeholder="Tên">
         </div>
         <br>
         <div>
-            <input type="text" placeholder="Số di động hoặc email">
+            <input type="text" name="phonenumber" placeholder="Số di động hoặc email">
         </div>
         <div>
-            <input type="text" placeholder="Mật khẩu mới">
+            <input type="text" name="newpassword" placeholder="Mật khẩu mới">
         </div>
     </form>
     <br>
@@ -89,10 +89,11 @@
         </span>
         <div class="question">Tại sao tôi cần cung cấp ngày sinh của mình?</div>
     </div>
-    
-    <br>
-    <input type="radio" name="gioitinh" id="" value="nu"> Nu
-    <input type="radio" name="gioitinh" id="" value="nam"> Nam <br>
-    <input type="submit" name="Tao tai khoan " value="tao tk">
+    <div>
+    <input type="radio" name="gioitinh" id="" value="nu"> Nữ
+    <input type="radio" name="gioitinh" id="" value="nam"> Nam 
+    </br>
+    <input type="submit" name="taotk" value="Tạo tài khoản">
+    </div>
 </body>
 </html>
