--- a/21880291_Lab05/21880291_ChangePassword.html
+++ b/21880291_Lab05/21880291_ChangePassword.html
@@ -10,7 +10,7 @@
         <fieldset >
             <legend>Change Password</legend>
             <div>
-                <label for="oldPassword">Old password:</label>
+                <label for="oldPassword">Old Password:</label> &nbsp;
                 <input type="password" name="oldpass" id="oldPassword" placeholder="Old Password" required 
                 oninput="this.setCustomValidity('')"
                 oninvalid="this.setCustomValidity('Please enter old password')">
