--- a/21880291_Lab05/21880291_Login.html
+++ b/21880291_Lab05/21880291_Login.html
@@ -11,14 +11,15 @@
   <body>
     <form action="./21880291_index.html" method="get" >
       <div>
-        <label for="user">user</label>
+        <h1>Login</h1>
+        <label for="user">User</label></br>
         <input type="text" name="username" id="username" required placeholder="enter your username" /> </br>
-        <label for="password">password</label>
+        <label for="password">Password</label> </br>
         <input type="password" name="password" id="password" required placeholder="enter your password" />
       </div>
       <div>
-        <a href="#">Quen mat khau</a>
-      </div>
+        <a href="#" style="font-size:11px" >Quen mat khau</a>
+      </div></br>
       <div>
         <input type="submit" id="sub" value="Login" />
       </div>
